guppy hat firmware

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nanoatmega328new]
+[env:trionix]
 platform = atmelavr
 board = nanoatmega328new
 framework = arduino
-build_src_filter =  +<*> -<main.cpp>
+build_src_filter =  +<*> -<guppy_328_hat.cpp> -<main.cpp>
+
+
+[env:guppy]
+platform = atmelavr
+board = nanoatmega328new
+framework = arduino
+build_src_filter =  +<*> -<trionix_328_hat.cpp> -<main.cpp>
