--- a/platformio.ini
+++ b/platformio.ini
@@ -8,15 +8,28 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[env:test]
+platform = atmelavr
+board = nanoatmega328new
+framework = arduino
+build_src_filter =  -<*> +<main.cpp>
+
 [env:trionix]
 platform = atmelavr
 board = nanoatmega328new
 framework = arduino
-build_src_filter =  +<*> -<guppy_328_hat.cpp> -<main.cpp>
+build_src_filter =  -<*> +<trionix_328_hat.cpp>
 
 
 [env:guppy]
 platform = atmelavr
 board = nanoatmega328new
 framework = arduino
-build_src_filter =  +<*> -<trionix_328_hat.cpp> -<main.cpp>
+build_src_filter =  -<*> +<guppy_328_hat.cpp>
+
+[env:test_serial]
+platform = atmelavr
+board = nanoatmega328new
+framework = arduino
+build_src_filter =  -<*> +<test_serial.cpp>
+
