guppy and trionix hat firmware: 3 tests and base work

--- a/platformio.ini
+++ b/platformio.ini
@@ -33,3 +33,21 @@ board = nanoatmega328new
 framework = arduino
 build_src_filter =  -<*> +<test_serial.cpp>
 
+[env:test_pwm]
+platform = atmelavr
+board = nanoatmega328new
+framework = arduino
+build_src_filter =  -<*> +<test_pwm.cpp>
+
+[env:test_presure]
+platform = atmelavr
+board = nanoatmega328new
+framework = arduino
+build_src_filter =  -<*> +<test_presure.cpp>
+
+[env:test_IMU]
+platform = atmelavr
+board = nanoatmega328new
+framework = arduino
+build_src_filter =  -<*> +<test_IMU.cpp>
+
