trionix_min and trionix_first add

--- a/platformio.ini
+++ b/platformio.ini
@@ -26,6 +26,24 @@ lib_deps =
 	fastled/FastLED@^3.6.0
 	gyverlibs/GyverFilters@^3.2
 
+[env:trionix_min]
+platform = atmelavr
+board = nanoatmega328new
+framework = arduino
+build_src_filter = -<*> +<trionix_328_hat_min.cpp>
+lib_deps = 
+	fastled/FastLED@^3.6.0
+	gyverlibs/GyverFilters@^3.2
+
+[env:trionix_first]
+platform = atmelavr
+board = nanoatmega328new
+framework = arduino
+build_src_filter = -<*> +<first_trionix.cpp>
+lib_deps = 
+	fastled/FastLED@^3.6.0
+	gyverlibs/GyverFilters@^3.2
+
 [env:guppy]
 platform = atmelavr
 board = nanoatmega328new
