--- a/platformio.ini
+++ b/platformio.ini
@@ -82,6 +82,7 @@ lib_deps =
 
 [env:test_presure]
 platform = atmelavr
+; board = megaatmega2560
 board = nanoatmega328new
 framework = arduino
 build_src_filter = -<*> +<test_presure.cpp>
