apdate manta and echo_sounder_test

--- a/platformio.ini
+++ b/platformio.ini
@@ -134,3 +134,23 @@ build_src_filter = -<*> +<nertus.cpp>
 lib_deps = 
 	fastled/FastLED@^3.6.0
 	gyverlibs/GyverFilters@^3.2
+
+[env:manta]
+platform = atmelavr
+board = nanoatmega328new
+framework = arduino
+build_src_filter = -<*> +<manta_test.cpp>
+lib_deps = 
+	fastled/FastLED@^3.6.0
+	gyverlibs/GyverFilters@^3.2
+
+
+
+[env:echo_sounder]
+platform = atmelavr
+board = nanoatmega328new
+framework = arduino
+build_src_filter = -<*> +<echo_sounder.cpp>
+; lib_deps = 
+; 	fastled/FastLED@^3.6.0
+; 	gyverlibs/GyverFilters@^3.2
