new trionix hat

--- a/platformio.ini
+++ b/platformio.ini
@@ -26,6 +26,15 @@ lib_deps =
 	fastled/FastLED@^3.6.0
 	gyverlibs/GyverFilters@^3.2
 
+[env:trionix_new]
+platform = atmelavr
+board = nanoatmega328new
+framework = arduino
+build_src_filter = -<*> +<trionix_328_hat_new.cpp>
+lib_deps = 
+	fastled/FastLED@^3.6.0
+	gyverlibs/GyverFilters@^3.2
+
 [env:trionix_min]
 platform = atmelavr
 board = nanoatmega328new
