new trionix_4-3 and neon

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,8 @@
 
 [env:test]
 platform = atmelavr
-board = nanoatmega328new
+; board = nanoatmega328new
+board = megaatmega2560
 framework = arduino
 build_src_filter = -<*> +<main.cpp>
 lib_deps = 
@@ -44,6 +45,18 @@ lib_deps =
 	fastled/FastLED@^3.6.0
 	gyverlibs/GyverFilters@^3.2
 
+[env:trionix_4-2]
+platform = atmelavr
+board = nanoatmega328new
+framework = arduino
+build_src_filter = -<*> +<trionix_328_hat_4-2.cpp>
+
+[env:trionix_4-3]
+platform = atmelavr
+board = nanoatmega328new
+framework = arduino
+build_src_filter = -<*> +<trionix_328_hat_4-3.cpp>
+
 [env:guppy]
 platform = atmelavr
 board = nanoatmega328new
@@ -58,6 +71,15 @@ platform = atmelavr
 board = nanoatmega328new
 framework = arduino
 build_src_filter = -<*> +<big_guppy_hat.cpp>
+lib_deps = 
+	fastled/FastLED@^3.6.0
+	gyverlibs/GyverFilters@^3.2
+
+[env:neon]
+platform = atmelavr
+board = nanoatmega328new
+framework = arduino
+build_src_filter = -<*> +<neon_hat_full.cpp>
 lib_deps = 
 	fastled/FastLED@^3.6.0
 	gyverlibs/GyverFilters@^3.2
@@ -95,9 +117,6 @@ platform = atmelavr
 board = nanoatmega328new
 framework = arduino
 build_src_filter = -<*> +<test_IMU.cpp>
-lib_deps = 
-	fastled/FastLED@^3.6.0
-	gyverlibs/GyverFilters@^3.2
 
 [env:test_compas]
 platform = atmelavr
@@ -113,9 +132,12 @@ platform = atmelavr
 board = nanoatmega328new
 framework = arduino
 build_src_filter = -<*> +<test_bar.cpp>
-lib_deps = 
-	fastled/FastLED@^3.6.0
-	gyverlibs/GyverFilters@^3.2
+
+[env:test_grap]
+platform = atmelavr
+board = nanoatmega328new
+framework = arduino
+build_src_filter = -<*> +<test_grap.cpp>
 
 [env:test_i2c]
 platform = atmelavr
@@ -143,8 +165,6 @@ build_src_filter = -<*> +<manta_test.cpp>
 lib_deps = 
 	fastled/FastLED@^3.6.0
 	gyverlibs/GyverFilters@^3.2
-
-
 
 [env:echo_sounder]
 platform = atmelavr
