update_compass_guppy

--- a/platformio.ini
+++ b/platformio.ini
@@ -125,7 +125,8 @@ build_src_filter = -<*> +<robobuy_max.cpp>
 
 [env:test_serial]
 platform = atmelavr
-board = nanoatmega328new
+; board = nanoatmega328new
+board = megaatmega2560
 framework = arduino
 build_src_filter = -<*> +<test_serial.cpp>
 lib_deps = 
@@ -153,7 +154,8 @@ lib_deps =
 
 [env:test_IMU]
 platform = atmelavr
-board = megaatmega2560
+; board = megaatmega2560
+board = nanoatmega328new
 framework = arduino
 build_src_filter = -<*> +<test_IMU.cpp>
 
@@ -177,7 +179,7 @@ platform = atmelavr
 ; board = nanoatmega328new
 board = megaatmega2560
 framework = arduino
-build_src_filter = -<*> +<echolot.cpp>
+build_src_filter = -<*> +<test_echolot.cpp>
 
 [env:test_bar]
 platform = atmelavr
